easy-volunteer/src/App.css
body {
  background-color: #1fc8db;
  background-image: linear-gradient(141deg, #9fb8ad 0%, #1fc8db 51%, #2cb5e8 75%) !important;
  font-family: 'Montserrat', sans-serif;
}

.left-sidebar{
  text-align: left;
}

th {
  vertical-align: top;
}

.right-sidebar {
  padding: 0px;
  margin: 0px;
}

.logoDiv {
  margin-bottom: 10px;
  margin-left: auto;
  margin-right: auto;
  display: flex;
  align-items: center;

}

.link-info-hidden-box {
  border: none;
  width: 0px;
  height: 0px;
  display: none;
  visibility: hidden;

}
.link-info {
    padding-bottom: 10px;
}

.link-info-text {
  cursor: pointer !important;
  padding: 5px;
  margin: 10px;
  background-color: #2184D0;
  color: white;
  border-radius: 5px;
  font-weight: bold;
}

form {
  margin-bottom: 2%;
}

.fields {
  margin-left: auto;
  margin-right: auto;
  align-items: center;
  justify-content: center;
}
.loginDiv {
  margin-top: 20px;
  margin-left: auto;
  margin-right: auto;

  /* display: flex;
  justify-content: center;
  flex-direction: row; */

}

.loginFormDiv {
  margin-left: auto;
  margin-right: auto;
  padding-bottom: 10px;
  font-weight: bold;
  font-size: 14px;
}

.login {
  margin-right: 10px;
  margin-left: 10px;

  font-family: 'Montserrat', sans-serif;

}

.logo {
  margin-top: 20px;
  text-shadow: 5px 5px 10px gray;
  color: steelblue;
  border-bottom: groove;

  width: 60%;
  display: block;
  margin-left: auto;
  margin-right: auto;

}

.calendar {
  padding: 0px;
  display: block;
  margin-left: auto;
  margin-right: auto;

}

.main-table {

  padding: 0px;
  margin: 0px;
  /* height: 100%; */
  width: 100vh;
}

.App {
  background-color: white;
  display: block;
  margin-left: auto;
  margin-right: auto;
  max-width: 75%;
  border-radius: 12px;
  padding-bottom: 10px;

}

.createEventBtn {
  margin-top: 20px;
  display: flex;
  justify-content: center;
}

.calendarDiv {
  margin-left: auto;
  margin-right: auto;
  display: inline-block;
}


.calendar {
  vertical-align: top;
  text-align: center;

}

.day {
  cursor: pointer;
  width: 120px;
  padding-right: 20px;
}

.slots {
  display: flex;
  flex-direction: column;
  height: 95%;
  border-radius: 10px;
  overflow: hidden;
  border: 1px solid black;
}

.header {
  font-family: 'Montserrat', sans-serif;
  height: 5%;
}

.headerSpacer {
  font-family: 'Montserrat', sans-serif;
  height: 5%;
  /* border: 1px solid blue; */
}

.slot-user {
  background-color:rgba(150, 255, 176,1);
  display: flex;
  justify-content: center;
  flex-direction: column;
  flex: 1;
  font-family: 'Montserrat', sans-serif;
  color: black;
  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
  outline: 1px solid black;
  animation-name: bg;
  animation-duration: .5s;
  animation-timing-function: linear;
  animation-delay: none;
  animation-iteration-count: 1;
  box-shadow: 0 0 7px rgba(0,0,0,0.55) inset;
}

@keyframes bg {
  0%{
    background-color: inherit;
   }

   100%{
     background-color: rgba(150, 255, 176,1);
   }
}


.slot-others {
  background-color:rgba(255,102,102,0.9);
  display: flex;
  justify-content: center;
  flex-direction: column;
  flex: 1;
  font-family: 'Montserrat', sans-serif;
  color: black;
  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
  outline: 1px solid black;
  box-shadow: 0 0px 4px rgba(0,0,0,0.55) inset;

}

.slot-free:hover{
	 box-shadow: 0 0px 10px rgba(0,0,0,0.55) inset;
}

.slot-free {
  font-family: 'Montserrat', sans-serif;
  display: flex;
  justify-content: center;
  flex-direction: column;
  color: black;
  flex: 1;
  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
  outline: 1px solid black;
  box-shadow: 0 0 7px rgba(0,0,0,0.55) inset;

}

.calendar {

  height: 600px;
}

.allTimestamps {
  display: flex;
  flex-direction: column;
}

.timestamp {
  display: flex;
  margin-top: -8px;
  padding-right: 10px;
  flex-direction: column;
  flex: 1;
  /* outline: 1px solid red; */
}

.allDays {
  display: flex;
  flex-direction: row;
  justify-content: center;
  height: 90%;
  padding-bottom: 20px;
  overflow-x: scroll;
}

.EventPrompt{
  margin-left: 10px;
  margin-right: 10px;
  font-size: 14pt;
  font-family: 'Montserrat', sans-serif;


}

.newEvent {
  margin-top: 30%;
  padding-bottom: 2%;
}

.instructions {
  margin-top: 10px;
}



/* for phones */
@media screen and (max-width: 848px) {
  .day {
    width: 120px;
  }
  .App {
    max-width: 90%;
  }

}

@media screen and (max-width: 480px) {
  .day {
    width: 80px;
  }
  .App {
    max-width: 90%;
  }
}

.bold {
  font-weight: bold;
}

.MyTimesModal {
  display: flex;
  flex-direction: column;
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  background-color: white;
  border: 1px solid grey;
  padding: 10px;
}

